# rspandas

./: .gitignore  Cargo.toml  PROGRESS.md  README.md  func.txt  plan.txt  pyproject.toml  smoke_test.py  validate.py
.github/workflows/: publish.yml
python/rspandas/: __init__.py  _rust.pyi  dataframe.py  datetime.py  indexes.py  io.py  offsets.py  rspandas.pyi  rspandas_api.pyi  series.py
python/rspandas/api/: __init__.py  types.py
src/: lib.rs
src/core/: csv_io.rs  dataframe.rs  dtype.rs  mod.rs  series.rs  xlsx_io.rs
tests/: __init__.py  test_aggregation.py  test_dataframe.py  test_series.py
