[package]
name = "rspandas"
version = "0.1.1"
edition = "2024"

[lib]
name = "rspandas"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
pyo3 = { version = "0.29.0" }
csv = "1.4.0"
rayon = "1.12.0"
calamine = "0.35.0"
rust_xlsxwriter = "0.95.0"

[profile.release]
opt-level = 3
lto = true
