[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rspandas"
version = "0.1.0"
description = "A pandas-like library built on Rust"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.maturin]
python-source = "python"
module-name = "rspandas._rust"
features = ["pyo3/extension-module"]
