[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rspandas"
version = "2.0.1"
description = "A pandas-like library built on Rust"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.maturin]
python-source = "python"
module-name = "rspandas"
features = ["pyo3/extension-module"]
